<resources>
    <string name="app_name">Neety</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_item_text">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="estimated_value">Estimated Value</string>
    <string name="description">Description</string>
    <string name="serial">Serial</string>
    <string name="Comments">Comments</string>
    <string name="Tags">Tags</string>
    <string name="delete_item_text">Delete</string>
    <string name="done_text">Done</string>
    <string name="model_hint">Model</string>
    <string name="make_hint">Make</string>
    <string name="estimated_value_hint">Estimated Value (#.##)</string>
    <string name="description_hint">Description (Max 20 characters)</string>
    <string name="purchase_date_hint">Purchase Date (yyyy-mm-dd)</string>
    <string name="serial_number_hint">Serial Number</string>
    <string name="comments_hint">Comments (Max 30 characters)</string>
    <string name="total_item_value_string">Total Estimated Value</string>
    <string name="loading_text">Loading...</string>

    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="no_images">No images to show</string>
    <string name="edit">Edit</string>

    <string name="camera_text">CAMERA</string>

</resources>